feat : implement payment service
and also fixed some issues and refactored.